trunk/components-ext/src/main/java/org/dllearner/algorithm/tbsl/sem/dudes/reader/DUDE_Parser.java
/* Generated By:JavaCC: Do not edit this line. DUDE_Parser.java */
package org.dllearner.algorithm.tbsl.sem.dudes.reader;

import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;

import org.dllearner.algorithm.tbsl.sem.drs.*;
import org.dllearner.algorithm.tbsl.sem.dudes.data.*;
import org.dllearner.algorithm.tbsl.sem.util.*;
import org.dllearner.algorithm.tbsl.sparql.Slot;
import org.dllearner.algorithm.tbsl.sparql.SlotType;

public class DUDE_Parser implements DUDE_ParserConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    DUDE_Parser parser = new DUDE_Parser(System.in);
    parser.Input();
  }

/** Root production. */
  final public void Input() throws ParseException {
    DUDE();
    jj_consume_token(0);
  }

/** DUDE */
  final public Dude DUDE() throws ParseException {
  Token referent;
  Token label;
  Type type;
  List<DRS> drs_list = null;
  List<DominanceConstraint> constraints = null;
  List<Argument> arg_list = null;
  List<Slot> slots = null;
    jj_consume_token(1);
    referent = dr();
    jj_consume_token(2);
    label = jj_consume_token(LABEL);
    jj_consume_token(2);
    type = Type();
    jj_consume_token(2);
    jj_consume_token(3);
    if (jj_2_1(2)) {
      drs_list = DRS_List();
    } else {
      ;
    }
    jj_consume_token(4);
    jj_consume_token(2);
    jj_consume_token(3);
    if (jj_2_2(2)) {
      arg_list = Arg_List();
    } else {
      ;
    }
    jj_consume_token(4);
    jj_consume_token(2);
    jj_consume_token(3);
    if (jj_2_3(2)) {
      constraints = DC_List();
    } else {
      ;
    }
    jj_consume_token(4);
    jj_consume_token(2);
    jj_consume_token(3);
    if (jj_2_4(2)) {
      slots = Slot_List();
    } else {
      ;
    }
    jj_consume_token(4);
    jj_consume_token(5);
      Dude dude = new Dude();
      dude.setReferent(referent.toString());
      dude.setType(type);
      if (drs_list != null) dude.setComponents(drs_list);
      dude.setLabel(new Label(label.toString()));
      if (arg_list != null) dude.setArguments(arg_list);
      if (constraints != null) dude.setDominanceConstraints(constraints);
      if (slots != null) dude.setSlots(slots);
      {if (true) return dude;}
    throw new Error("Missing return statement in function");
  }

  final public DominanceConstraint DominanceConstraint() throws ParseException {
   Label label1;
   Label label2;
   Token domType;
   DominanceConstraint dc = null;
    if (jj_2_5(2)) {
      label1 = Label();
      jj_consume_token(1);
      label2 = Label();
        dc = new DominanceConstraint(label1,label2);
        {if (true) return dc;}
    } else if (jj_2_6(2)) {
      label1 = Label();
      jj_consume_token(5);
      label2 = Label();
        dc = new DominanceConstraint(label2,label1);
        {if (true) return dc;}
    } else if (jj_2_7(2)) {
      label1 = Label();
      jj_consume_token(6);
      label2 = Label();
                dc = new DominanceConstraint(label1,label2);
                        dc.setType(DomType.equal);
                        {if (true) return dc;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Label Label() throws ParseException {
  Token label;
    if (jj_2_8(2)) {
      label = jj_consume_token(LABEL);
     {if (true) return new Label(label.toString());}
    } else if (jj_2_9(2)) {
      jj_consume_token(7);
      label = jj_consume_token(LABEL);
      jj_consume_token(8);
          {if (true) return new Label(label.toString(),Position.res);}
    } else if (jj_2_10(2)) {
      jj_consume_token(9);
      label = jj_consume_token(LABEL);
      jj_consume_token(8);
          {if (true) return new Label(label.toString(),Position.scope);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List<DominanceConstraint> DC_List() throws ParseException {
List<DominanceConstraint> dc_list = null;
DominanceConstraint dc = null;
    dc = DominanceConstraint();
    if (jj_2_11(2)) {
      jj_consume_token(2);
      dc_list = DC_List();
    } else {
      ;
    }
       if (dc_list == null)
       {
          dc_list = new ArrayList<DominanceConstraint>();
       }

        dc_list.add(0,dc);
        {if (true) return dc_list;}
    throw new Error("Missing return statement in function");
  }

  final public List<DRS> DRS_List() throws ParseException {
  DRS drs;
  List<DRS> drs_list = null;
    drs = DRS();
    if (jj_2_12(2)) {
      jj_consume_token(2);
      drs_list = DRS_List();
    } else {
      ;
    }
       if (drs_list == null)
       {
          drs_list = new ArrayList<DRS>();
       }

        drs_list.add(0,drs);
        {if (true) return drs_list;}
    throw new Error("Missing return statement in function");
  }

  final public List<Argument> Arg_List() throws ParseException {
  Argument argument;
  List<Argument> arg_list = null;
    argument = Argument();
    if (jj_2_13(2)) {
      jj_consume_token(2);
      arg_list = Arg_List();
    } else {
      ;
    }
       if (arg_list == null)
       {
          arg_list = new ArrayList<Argument>();
       }

        arg_list.add(0,argument);
        {if (true) return arg_list;}
    throw new Error("Missing return statement in function");
  }

  final public Argument Argument() throws ParseException {
  Token label;
  Token word;
  Token referent;
  Type type;
    jj_consume_token(10);
    label = jj_consume_token(LABEL);
    jj_consume_token(2);
    referent = dr();
    jj_consume_token(2);
    word = word();
    jj_consume_token(2);
    type = Type();
    jj_consume_token(8);
       Argument argument = new Argument();
       argument.setLabel(new Label(label.toString()));
       argument.setReferent(referent.toString());
       argument.setAnchor(word.toString());
       argument.setType(type);
       {if (true) return argument;}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {
  Type argument;
  Type result;
  Token word;
    if (jj_2_14(2)) {
      jj_consume_token(1);
      argument = Type();
      jj_consume_token(2);
      result = Type();
      jj_consume_token(5);
        CompositeType type = new CompositeType();
        type.setArgumentType(argument);
        type.setResultType(result);
        {if (true) return type;}
    } else if (jj_2_15(2)) {
      word = word();
            ElementaryType type=null;
        if (word.toString().equals("e"))
               type = new ElementaryType(ElemType.e);
        if (word.toString().equals("t"))
           type = new ElementaryType(ElemType.t);
             {if (true) return type;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/** DRS */
  final public DRS DRS() throws ParseException {
        Set<DiscourseReferent> dr_set = null;
        Set<DRS_Condition> conditions = null;
        DRS drs;
    Token label;
    label = jj_consume_token(LABEL);
    jj_consume_token(11);
    if (jj_2_16(2)) {
      dr_set = DR_Set();
    } else {
      ;
    }
    jj_consume_token(12);
    if (jj_2_17(2)) {
      conditions = Condition_List();
    } else {
      ;
    }
    jj_consume_token(4);
       if (dr_set == null)
       {
          dr_set = new HashSet<DiscourseReferent>();
       }
       drs = new DRS();
       drs.setLabel(label.toString());
       drs.setDiscourseReferents(dr_set);
       if (conditions != null)
       drs.setDRSConditions(conditions);
       {if (true) return drs;}
    throw new Error("Missing return statement in function");
  }

/** DR_Set*/
  final public Set<DiscourseReferent> DR_Set() throws ParseException {
   Token dr;
   Set<DiscourseReferent> dr_set=null;
    dr = dr();
    if (jj_2_18(2)) {
      jj_consume_token(2);
      dr_set = DR_Set();
    } else {
      ;
    }
      if (dr_set == null)
      {
         dr_set= new HashSet<DiscourseReferent>();
      }
      if (dr.toString().startsWith("?"))
      {
         dr_set.add(new DiscourseReferent(dr.toString().substring(1),true,false));
      }
      else if (dr.toString().startsWith("!"))
      {
         dr_set.add(new DiscourseReferent(dr.toString().substring(1),false,true));
      }
      else
      {
                 dr_set.add(new DiscourseReferent(dr.toString(),false,false));
      }
      {if (true) return dr_set;}
    throw new Error("Missing return statement in function");
  }

  final public Set<DRS_Condition> Condition_List() throws ParseException {
    DRS_Condition condition= null;
    Set<DRS_Condition> conditions = null;
    condition = Condition();
    if (jj_2_19(2)) {
      jj_consume_token(2);
      conditions = Condition_List();
    } else {
      ;
    }
    if (conditions == null)
      {
         conditions = new HashSet<DRS_Condition>();
      }
          conditions.add(condition);
      {if (true) return conditions;}
    throw new Error("Missing return statement in function");
  }

  final public DRS_Condition Condition() throws ParseException {
      List<DiscourseReferent> dr_list;
      Token dr1;
      Token dr2;
      Token dr;
      Token predicate;
      Token quantifier;
      DRS drs1;
      DRS drs2;
    if (jj_2_29(2)) {
      predicate = word();
      jj_consume_token(10);
      dr_list = DR_List();
      jj_consume_token(8);
        Simple_DRS_Condition condition;

        condition = new Simple_DRS_Condition();
        condition.setPredicate(predicate.toString());
        condition.setArguments(dr_list);
        {if (true) return condition;}
    } else if (jj_2_30(2)) {
      dr1 = dr();
      jj_consume_token(6);
      dr2 = dr();
        Simple_DRS_Condition condition;

        condition = new Simple_DRS_Condition();
        condition.setPredicate("equal");
        condition.addArgument(new DiscourseReferent(dr1.toString()));
                condition.addArgument(new DiscourseReferent(dr2.toString()));
        {if (true) return condition;}
    } else if (jj_2_31(2)) {
      jj_consume_token(13);
      drs1 = DRS();
       Negated_DRS drs = new Negated_DRS();
       drs.setDRS(drs1);
       {if (true) return drs;}
    } else if (jj_2_32(2)) {
      drs1 = DRS();
      if (jj_2_20(2)) {
        quantifier = jj_consume_token(EVERY);
      } else if (jj_2_21(2)) {
        quantifier = jj_consume_token(SOME);
      } else if (jj_2_22(2)) {
        quantifier = jj_consume_token(AFEW);
      } else if (jj_2_23(2)) {
        quantifier = jj_consume_token(MOST);
      } else if (jj_2_24(2)) {
        quantifier = jj_consume_token(THEMOST);
      } else if (jj_2_25(2)) {
        quantifier = jj_consume_token(THELEAST);
      } else if (jj_2_26(2)) {
        quantifier = jj_consume_token(HOWMANY);
      } else if (jj_2_27(2)) {
        quantifier = jj_consume_token(MANY);
      } else if (jj_2_28(2)) {
        quantifier = jj_consume_token(NO);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      dr = dr();
      drs2 = DRS();
                Complex_DRS_Condition drs;
        drs = new Complex_DRS_Condition();
                drs.setRestrictor(drs1);
        drs.setScope(drs2);
                drs.setReferent(new DiscourseReferent(dr.toString()));

                if (quantifier.toString().equals("EVERY")) {drs.setQuantifier(DRS_Quantifier.EVERY);}
                if (quantifier.toString().equals("SOME")) {drs.setQuantifier(DRS_Quantifier.SOME);}
                if (quantifier.toString().equals("MOST")) {drs.setQuantifier(DRS_Quantifier.MOST);}
                if (quantifier.toString().equals("THEMOST")) {drs.setQuantifier(DRS_Quantifier.THEMOST);}
                if (quantifier.toString().equals("THELEAST")) {drs.setQuantifier(DRS_Quantifier.THELEAST);}
                if (quantifier.toString().equals("AFEW")) {drs.setQuantifier(DRS_Quantifier.FEW);}
                if (quantifier.toString().equals("MANY")) {drs.setQuantifier(DRS_Quantifier.MANY);}
                if (quantifier.toString().equals("HOWMANY")) {drs.setQuantifier(DRS_Quantifier.HOWMANY);}
                if (quantifier.toString().equals("NO")) {drs.setQuantifier(DRS_Quantifier.NO);}

        {if (true) return drs;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/** DR_List*/
  final public List<DiscourseReferent> DR_List() throws ParseException {
   Token dr;
   List<DiscourseReferent> dr_list=null;
    dr = dr();
    if (jj_2_33(2)) {
      jj_consume_token(2);
      dr_list = DR_List();
    } else {
      ;
    }
      if (dr_list == null)
      {
         dr_list= new ArrayList<DiscourseReferent>();
      }

      if (dr.toString().startsWith("?")) {
         dr_list.add(0,new DiscourseReferent(dr.toString().substring(1),true,false));
      }
      else if (dr.toString().startsWith("?")) {
         dr_list.add(0,new DiscourseReferent(dr.toString().substring(1),false,true));
      }
      else {
                 dr_list.add(0,new DiscourseReferent(dr.toString(),false,false));
      }

      {if (true) return dr_list;}
    throw new Error("Missing return statement in function");
  }

  final public List<Slot> Slot_List() throws ParseException {
  Slot slot;
  List<Slot> slots = null;
    slot = Slot();
    if (jj_2_34(2)) {
      jj_consume_token(2);
      slots = Slot_List();
    } else {
      ;
    }
       if (slots == null)
       {
         slots = new ArrayList<Slot>();
       }

        slots.add(slot);
        {if (true) return slots;}
    throw new Error("Missing return statement in function");
  }

  final public Slot Slot() throws ParseException {
  Token ref;
  Token type;
  SlotType slottype = null;
  List<String> words = null;
    ref = word();
    jj_consume_token(14);
    type = word();
    jj_consume_token(14);
    if (jj_2_35(2)) {
      words = Word_List();
    } else {
      ;
    }
     if (words == null)
     {
       words = new ArrayList<String>();
     }
         if (type.toString().equals("CLASS")) { slottype = SlotType.CLASS; }
         else if (type.toString().equals("RESOURCE")) { slottype = SlotType.RESOURCE; }
         else if (type.toString().equals("DATATYPEPROPERTY")) { slottype = SlotType.DATATYPEPROPERTY; }
         else if (type.toString().equals("OBJECTPROPERTY")) { slottype = SlotType.OBJECTPROPERTY; }
         else if (type.toString().equals("PROPERTY")) { slottype = SlotType.PROPERTY; }
         else if (type.toString().equals("SYMPROPERTY")) { slottype = SlotType.SYMPROPERTY; }
         else if (type.toString().equals("LITERAL")) { slottype = SlotType.LITERAL; }
         else { slottype = SlotType.UNSPEC; }

     {if (true) return new Slot(ref.toString(),slottype,words);}
    throw new Error("Missing return statement in function");
  }

  final public List<String> Word_List() throws ParseException {
  Token word;
  List<String> words = null;
    word = word();
    if (jj_2_36(2)) {
      jj_consume_token(15);
      words = Word_List();
    } else {
      ;
    }
       if (words == null)
       {
         words = new ArrayList<String>();
       }

        words.add(0,word.toString());
        {if (true) return words;}
    throw new Error("Missing return statement in function");
  }

  final public Token dr() throws ParseException {
               Token t;
    if (jj_2_37(2)) {
      t = jj_consume_token(A);
    } else if (jj_2_38(2)) {
      t = jj_consume_token(C);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                             {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token word() throws ParseException {
                 Token t;
    if (jj_2_39(2)) {
      t = jj_consume_token(A);
    } else if (jj_2_40(2)) {
      t = jj_consume_token(B);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                               {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }
